--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.27.0",
     "recoil": "^0.7.7",
+    "socket.io-client": "^4.8.1",
     "tailwind-scrollbar-hide": "^1.1.7"
   },
   "devDependencies": {
@@ -23,6 +24,7 @@
     "@types/navermaps": "^3.7.8",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "@types/socket.io-client": "^1.4.36",
     "@vitejs/plugin-react": "^4.3.3",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.13.0",
