--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-router-dom": "^6.27.0",
     "recoil": "^0.7.7",
     "socket.io-client": "^4.8.1",
-    "tailwind-scrollbar-hide": "^1.1.7"
+    "tailwind-scrollbar-hide": "^1.1.7",
+    "vite-plugin-mkcert": "^1.17.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
