--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "nailo-fe",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.1.0",
   "type": "module",
   "scripts": {
     "dev": "vite --host",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "gen-pwa": "pwa-assets-generator --preset minimal public/logo.svg"
   },
   "dependencies": {
     "@types/react-router-dom": "^5.3.3",
@@ -26,6 +27,7 @@
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@types/socket.io-client": "^1.4.36",
+    "@vite-pwa/assets-generator": "^0.2.6",
     "@vitejs/plugin-react": "^4.3.3",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.13.0",
